# mlp-numpy

./: README.md  pyproject.toml
mlp_numpy/: __init__.py  _mlp.py
tests/: test_mlp.py
