[tool.poetry]
name = "mlp_numpy"
version = "0.1.0"
description = "Multi-Layer perceptron implementation in pure NumPy (no automatic differentiation)"
authors = ["Parsiad Azimzadeh <parsiad.azimzadeh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
pytest = "^7.1.2"
mypy = "^0.950"
rope = "^1.0.0"
taskipy = "^1.10.1"

[tool.pylint.format]
max-line-length = 120
disable = "C0114"

[tool.taskipy.tasks]
test = "python -m pytest tests/test_*.py"
post_test = "task lint"

lint = "task lint_pylint && task lint_mypy"
lint_pylint = "pylint tests mlp_numpy"
lint_mypy = "mypy tests mlp_numpy"

pre_publish = "./task test"
publish = "poetry publish --build"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
